# llm-plugin-tester

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
docs/: ATTACK_VECTORS.md  BUG_BOUNTY_GUIDE.md
examples/malicious-gpt-action/: ai-plugin.json  openapi.yaml
examples/vulnerable-mcp-server/: mcp-config.json
reports/templates/: README.md  markdown_exfil_report.md  ssrf_report.md
src/llm_plugin_tester/: __init__.py  cli.py  config.py
src/llm_plugin_tester/oracle/: __init__.py  listener.py
src/llm_plugin_tester/payloads/: __init__.py  attack_payloads.py
src/llm_plugin_tester/proxy/: __init__.py  interceptor.py
src/llm_plugin_tester/recon/: __init__.py  mcp_auditor.py  openapi_parser.py
tests/: test_mcp_auditor.py  test_openapi_parser.py  test_oracle.py  test_payloads.py  test_proxy.py
